# vintage-data-lake

./: .gitignore  README.md  pyproject.toml
vintage_data_lake/: centroid.py  chunk_docs.py  chunks_to_embeddings.py  ingest_docs_ia.py  lake.py  utils.py
vintage_data_lake/dim_red/: dr_umap.py
vintage_data_lake/fts/quickwit/: COMMANDS.md  chunks-index.yaml  ingest.py  node.yaml  search.py
vintage_data_lake/ss/: build_ss_cuvs.py  build_ss_index.py  search.py
